--- a/index.html
+++ b/index.html
@@ -32,14 +32,17 @@
                 <h2>Fonctionnement</h2>
                 <div id="fonctionnement-cards">
                     <article class="card">
-                        <i class="fa-solid fa-mobile-screen-button" style="color: #75777a;"></i>
+                        <p>1</p>
+                        <i class="fa-solid fa-mobile-screen-button" style="color: #7E7E7E;"></i>
                         <p>Choisissez un restaurant</p>
                     </article>
                     <article class="card">
-                        <i class="fa-solid fa-list-ul" style="color: #75777a;"></i>
+                        <p>2</p>
+                        <i class="fa-solid fa-list-ul" style="color: #7E7E7E;"></i>
                         <p>Composez votre menu</p>
                     </article>
                     <article class="card">
+                        <p>3</p>
                         <i class="fa-solid fa-utensils" style="color: #9747FF;"></i>
                         <p>Dégustez au restaurant</p>
                     </article>
@@ -51,23 +54,40 @@
                 <div id="restaurants-cards">
                     <article class="card">
                         <img src="./assets/img/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="restaurant">
+                        <div class="nouveau">Nouveau</div>
                         <div class="card-content">
                             <div>
                                 <p>La palette du goût</p>
                                 <p>Ménilmontant</p>
                             </div>
-                            <i class="fa-regular fa-heart" style="color: #000000;"></i>
+                            <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 24 24" fill="#FFF" stroke="black">
+                                <defs>
+                                    <linearGradient id="custom-gradient" x1="0%" y1="0%" x2="0%" y2="100%">
+                                      <stop offset="0%" style="stop-color: #c471f5" />
+                                      <stop offset="100%" style="stop-color: #fa71cd" />
+                                    </linearGradient>
+                                  </defs>
+                                <path class="gradient-path" d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z"/>
+                            </svg>
                         </div>
                     </article>
                     <article class="card">
                         <img src="./assets/img/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="restaurant">
+                        <div class="nouveau">Nouveau</div>
                         <div class="card-content">
                             <div>
                                 <p>La note enchantée</p>
                                 <p>Charonne</p>
                             </div>
-                            <i class="fa-regular fa-heart" style="color: #000000;"></i>
-                        </div>
+                            <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 24 24" fill="#FFF" stroke="black">
+                                <defs>
+                                    <linearGradient id="custom-gradient" x1="0%" y1="0%" x2="0%" y2="100%">
+                                      <stop offset="0%" style="stop-color: #c471f5" />
+                                      <stop offset="100%" style="stop-color: #fa71cd" />
+                                    </linearGradient>
+                                  </defs>
+                                <path class="gradient-path" d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z"/>
+                            </svg>                        </div>
                     </article>
                     <article class="card">
                         <img src="./assets/img/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="restaurant">
@@ -76,8 +96,15 @@
                                 <p>À la française</p>
                                 <p>Cité rouge</p>
                             </div>
-                            <i class="fa-regular fa-heart" style="color: #000000;"></i>
-                        </div>
+                            <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 24 24" fill="#FFF" stroke="black">
+                                <defs>
+                                    <linearGradient id="custom-gradient" x1="0%" y1="0%" x2="0%" y2="100%">
+                                      <stop offset="0%" style="stop-color: #c471f5" />
+                                      <stop offset="100%" style="stop-color: #fa71cd" />
+                                    </linearGradient>
+                                  </defs>
+                                <path class="gradient-path" d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z"/>
+                            </svg>                        </div>
                     </article>
                     <article class="card">
                         <img src="./assets/img/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="restaurant">
@@ -86,8 +113,15 @@
                                 <p>Le délice des sens</p>
                                 <p>Folie-Méricourt</p>
                             </div>
-                            <i class="fa-regular fa-heart" style="color: #000000;"></i>
-                        </div>
+                            <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 24 24" fill="#FFF" stroke="black">
+                                <defs>
+                                    <linearGradient id="custom-gradient" x1="0%" y1="0%" x2="0%" y2="100%">
+                                      <stop offset="0%" style="stop-color: #c471f5" />
+                                      <stop offset="100%" style="stop-color: #fa71cd" />
+                                    </linearGradient>
+                                  </defs>
+                                <path class="gradient-path" d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z"/>
+                            </svg>                        </div>
                     </article>
 
                 </div>
