--- a/pages/palette.html
+++ b/pages/palette.html
@@ -5,129 +5,112 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>OhMyFood</title>
-    <link rel="stylesheet" type="text/css" href="./assets/styles.css">
+    <link rel="stylesheet" type="text/css" href="../assets/styles.css">
+    <link rel="stylesheet" type="text/css" href="../assets/styles-pages.css">
+
     <script src="https://kit.fontawesome.com/af69d2ae7a.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
     <div class="container">
         <header>
-            <img src="assets/img/logo/ohmyfood@2x.svg" alt="logo">
+            <img src="../assets/img/logo/ohmyfood@2x.svg" alt="logo">
         </header>
 
         <main>
-            <section id="location-explore">
-                <div id="location">
-                    <i class="fa-solid fa-location-dot"></i>
-                    <p>Paris, Belleville</p>
-                </div>
-                <div id="explore">
-                    <h2>Réservez le menu qui vous convient</h2>
-                    <p>Découvrez des restaurants d’exception, sélectionnés par nos soins.</p>
-                    <button>Explorez nos restaurants</button>
+            <section id="restaurant">
+                <img src="../assets/img/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="restaurant">
+                <div>
+                    <div id="restaurant-title">
+                        <h1>La palette du goût</h1>
+                        <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 24 24" fill="#FFF" stroke="black">
+                            <defs>
+                                <linearGradient id="custom-gradient" x1="0%" y1="0%" x2="0%" y2="100%">
+                                    <stop offset="0%" style="stop-color: #c471f5" />
+                                    <stop offset="100%" style="stop-color: #fa71cd" />
+                                </linearGradient>
+                            </defs>
+                            <path class="gradient-path" d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z"/>
+                        </svg>
+                    </div>
+                    <h4>ENTRÉES</h4>
+                    <div id="restaurant-cards">
+                        <article class="card">
+                            <div>
+                                <p>Fricassée d'escargots</p>
+                                <p>Au piment d'Espelette</p>
+                            </div>
+                            <p class="price">25€</p>
+                        </article>
+                        <article class="card">
+                            <div>
+                                <p>Foie gras de canard mi-cuit</p>
+                                <p>Et ses copeaux de truffe noire</p>
+                            </div>
+                            <p class="price">35€</p>
+                        </article>
+                        <article class="card">
+                            <div>
+                                <p>Œuf au plat</p>
+                                <p>Assaisonné à la truffe sur lit de caviar</p>
+                            </div>
+                            <p class="price">20€</p>
+                        </article>
+                    </div>
+                    <h4>PLATS</h4>
+                    <div id="restaurant-cards">
+                        <article class="card">
+                            <div>
+                                <p>Filet de bœuf aux herbes</p>
+                                <p>Accompagné de sa ribambelle de légumes</p>
+                            </div>
+                            <p class="price">40€</p>
+                        </article>
+                        <article class="card">
+                            <div>
+                                <p>Parmentier de queue de bœuf</p>
+                                <p>À la truffe noire sur sa purée de panais</p>
+                            </div>
+                            <p class="price">35€</p>
+                        </article>
+                        <article class="card">
+                            <div>
+                                <p>Filet de turbot</p>
+                                <p>Aux agrumes</p>
+                            </div>
+                            <p class="price">44€</p>
+                        </article>
+                    </div>
+                    <h4>DESSERTS</h4>
+                    <div id="restaurant-cards">
+                        <article class="card">
+                            <div>
+                                <p>Paris-Brest</p>
+                                <p>Revisité</p>
+                            </div>
+                            <p class="price">18€</p>
+                        </article>
+                        <article class="card">
+                            <div>
+                                <p>Macaron au chocolat d'exception </p>
+                                <p>Et glace à la vanille de Madagascar</p>
+                            </div>
+                            <p class="price">22€</p>
+                        </article>
+                        <article class="card">
+                            <div>
+                                <p>Mousse au chocolat </p>
+                                <p>Au piment d'Espelette et à la truffe noire</p>
+                            </div>
+                            <p class="price">23€</p>
+                        </article>
+                    </div>
+                    <div id="btn">
+                        <button >Commander</button>
+                    </div>
                 </div>
             </section>
 
-            <section id="fonctionnement">
-                <h2>Fonctionnement</h2>
-                <div id="fonctionnement-cards">
-                    <article class="card">
-                        <p>1</p>
-                        <i class="fa-solid fa-mobile-screen-button" style="color: #7E7E7E;"></i>
-                        <p>Choisissez un restaurant</p>
-                    </article>
-                    <article class="card">
-                        <p>2</p>
-                        <i class="fa-solid fa-list-ul" style="color: #7E7E7E;"></i>
-                        <p>Composez votre menu</p>
-                    </article>
-                    <article class="card">
-                        <p>3</p>
-                        <i class="fa-solid fa-utensils" style="color: #9747FF;"></i>
-                        <p>Dégustez au restaurant</p>
-                    </article>
-                </div>
-            </section>
-
-            <section id="restaurants">
-                <h2>Restaurants</h2>
-                <div id="restaurants-cards">
-                    <article class="card">
-                        <a href="/pages/palette.html">
-                        <img src="./assets/img/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="restaurant">
-                        <div class="nouveau">Nouveau</div>
-                        <div class="card-content">
-                            <div>
-                                <p>La palette du goût</p>
-                                <p>Ménilmontant</p>
-                            </div>
-                            <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 24 24" fill="#FFF" stroke="black">
-                                <defs>
-                                    <linearGradient id="custom-gradient" x1="0%" y1="0%" x2="0%" y2="100%">
-                                      <stop offset="0%" style="stop-color: #c471f5" />
-                                      <stop offset="100%" style="stop-color: #fa71cd" />
-                                    </linearGradient>
-                                  </defs>
-                                <path class="gradient-path" d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z"/>
-                            </svg>
-                        </div>
-                        </a>
-                    </article>
-                    <article class="card">
-                        <img src="./assets/img/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="restaurant">
-                        <div class="nouveau">Nouveau</div>
-                        <div class="card-content">
-                            <div>
-                                <p>La note enchantée</p>
-                                <p>Charonne</p>
-                            </div>
-                            <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 24 24" fill="#FFF" stroke="black">
-                                <defs>
-                                    <linearGradient id="custom-gradient" x1="0%" y1="0%" x2="0%" y2="100%">
-                                      <stop offset="0%" style="stop-color: #c471f5" />
-                                      <stop offset="100%" style="stop-color: #fa71cd" />
-                                    </linearGradient>
-                                  </defs>
-                                <path class="gradient-path" d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z"/>
-                            </svg>                        </div>
-                    </article>
-                    <article class="card">
-                        <img src="./assets/img/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="restaurant">
-                        <div class="card-content">
-                            <div>
-                                <p>À la française</p>
-                                <p>Cité rouge</p>
-                            </div>
-                            <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 24 24" fill="#FFF" stroke="black">
-                                <defs>
-                                    <linearGradient id="custom-gradient" x1="0%" y1="0%" x2="0%" y2="100%">
-                                      <stop offset="0%" style="stop-color: #c471f5" />
-                                      <stop offset="100%" style="stop-color: #fa71cd" />
-                                    </linearGradient>
-                                  </defs>
-                                <path class="gradient-path" d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z"/>
-                            </svg>                        </div>
-                    </article>
-                    <article class="card">
-                        <img src="./assets/img/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="restaurant">
-                        <div class="card-content">
-                            <div>
-                                <p>Le délice des sens</p>
-                                <p>Folie-Méricourt</p>
-                            </div>
-                            <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 24 24" fill="#FFF" stroke="black">
-                                <defs>
-                                    <linearGradient id="custom-gradient" x1="0%" y1="0%" x2="0%" y2="100%">
-                                      <stop offset="0%" style="stop-color: #c471f5" />
-                                      <stop offset="100%" style="stop-color: #fa71cd" />
-                                    </linearGradient>
-                                  </defs>
-                                <path class="gradient-path" d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z"/>
-                            </svg>                        </div>
-                    </article>
-
-                </div>
-            </section>
         </main>
 
         <footer>
@@ -150,8 +133,7 @@
                 <p>Devenir partenaire</p>
             </div>   
             <p>Mentions légales</p>
-            <p>Contact</p>        
-            
+            <p>Contact</p>                    
         </footer>
     </div>
 </body>
