--- a/pages/note.html
+++ b/pages/note.html
@@ -23,7 +23,7 @@
                 <img src="../assets/img/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="restaurant">
                 <div>
                     <div id="restaurant-title">
-                        <h1>La palette du goût</h1>
+                        <h1>La note enchantée</h1>
                         <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 24 24" fill="#FFF" stroke="black">
                             <defs>
                                 <linearGradient id="custom-gradient" x1="0%" y1="0%" x2="0%" y2="100%">
@@ -38,70 +38,77 @@
                     <div id="restaurant-cards">
                         <article class="card">
                             <div>
-                                <p>Fricassée d'escargots</p>
-                                <p>Au piment d'Espelette</p>
+                                <p>Ravioles de foie gras</p>
+                                <p>Accompagnées de leur crème à la truffe</p>
                             </div>
                             <p class="price">25€</p>
                         </article>
                         <article class="card">
                             <div>
-                                <p>Foie gras de canard mi-cuit</p>
-                                <p>Et ses copeaux de truffe noire</p>
+                                <p>Caviar osciètre</p>
+                                <p>Sur blini à la farine de blé noir</p>
                             </div>
                             <p class="price">35€</p>
                         </article>
                         <article class="card">
                             <div>
-                                <p>Œuf au plat</p>
-                                <p>Assaisonné à la truffe sur lit de caviar</p>
+                                <p>Homard et espuma de potiron</p>
+                                <p>Marinés aux zestes d'orange</p>
                             </div>
                             <p class="price">20€</p>
+                        </article>
+                        <article class="card">
+                            <div>
+                                <p>Foie gras de canard cuit entier</p>
+                                <p>Confiture de figue et pain toasté</p>
+                            </div>
+                            <p class="price">35€</p>
                         </article>
                     </div>
                     <h4>PLATS</h4>
                     <div id="restaurant-cards">
                         <article class="card">
                             <div>
-                                <p>Filet de bœuf aux herbes</p>
-                                <p>Accompagné de sa ribambelle de légumes</p>
+                                <p>Noix de coquilles Saint-Jacques</p>
+                                <p>Sur lit de purée de céleri-rave</p>
                             </div>
                             <p class="price">40€</p>
                         </article>
                         <article class="card">
                             <div>
-                                <p>Parmentier de queue de bœuf</p>
-                                <p>À la truffe noire sur sa purée de panais</p>
+                                <p>Langoustine poêlée</p>
+                                <p>Purée de patate douce</p>
                             </div>
                             <p class="price">35€</p>
                         </article>
                         <article class="card">
                             <div>
-                                <p>Filet de turbot</p>
-                                <p>Aux agrumes</p>
+                                <p>Mijoté de queue de bœuf</p>
+                                <p>Et riz sauvage aux zestes de citron</p>
                             </div>
-                            <p class="price">44€</p>
+                            <p class="price">45€</p>
                         </article>
                     </div>
                     <h4>DESSERTS</h4>
                     <div id="restaurant-cards">
                         <article class="card">
                             <div>
-                                <p>Paris-Brest</p>
-                                <p>Revisité</p>
+                                <p>Macaron noisette et chocolat</p>
+                                <p>Glace au caramel brun et sel de Guérande</p>
                             </div>
                             <p class="price">18€</p>
                         </article>
                         <article class="card">
                             <div>
-                                <p>Macaron au chocolat d'exception</p>
-                                <p>Et glace à la vanille de Madagascar</p>
+                                <p>Baba au rhum revisité</p>
+                                <p>Avec son coulis de citron</p>
                             </div>
                             <p class="price">22€</p>
                         </article>
                         <article class="card">
                             <div>
-                                <p>Mousse au chocolat</p>
-                                <p>Au piment d'Espelette et à la truffe noire</p>
+                                <p>Tarte au citron meringuée</p>
+                                <p>Déstructurée</p>
                             </div>
                             <p class="price">23€</p>
                         </article>
