--- a/pages/francaise.html
+++ b/pages/francaise.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>OhMyFood</title>
-    <link rel="stylesheet" type="text/css" href="../style.css">
-    <link rel="stylesheet" type="text/css" href="../style-pages.css">
+    <link rel="stylesheet" type="text/css" href="../home.css">
+    <link rel="stylesheet" type="text/css" href="../restaurants.css">
 
     <script src="https://kit.fontawesome.com/af69d2ae7a.js" crossorigin="anonymous"></script>
 </head>
@@ -30,10 +30,10 @@
                             </div>
                     </div>
                     <h4>ENTRÉES</h4>
-                    <div id="restaurant-cards">
+                    <div class="restaurant-cards">
                         <article class="card">
                             <div>
-                                <p>Tartare de poulpe acidulé</p>
+                                <h3>Tartare de poulpe acidulé</h3>
                                 <p>Aux zestes d'orange</p>
                             </div>
                             <div class="price-and-check">
@@ -43,7 +43,7 @@
                         </article>
                         <article class="card">
                             <div>
-                                <p>Velouté de légumes d'antan</p>
+                                <h3>Velouté de légumes d'antan</h3>
                                 <p>Carotte, panais, topinambour</p>
                             </div>
                             <div class="price-and-check">
@@ -53,7 +53,7 @@
                         </article>
                         <article class="card">
                             <div>
-                                <p>Soupe à l'oignon</p>
+                                <h3>Soupe à l'oignon</h3>
                                 <p>Revisitée</p>
                             </div>
                             <div class="price-and-check">
@@ -63,10 +63,10 @@
                         </article>
                     </div>
                     <h4>PLATS</h4>
-                    <div id="restaurant-cards">
+                    <div class="restaurant-cards">
                         <article class="card">
                             <div>
-                                <p>Coquilles Saint-Jacques</p>
+                                <h3>Coquilles Saint-Jacques</h3>
                                 <p>Accompagnées d'une purée de panais</p>
                             </div>
                             <div class="price-and-check">
@@ -76,7 +76,7 @@
                         </article>
                         <article class="card">
                             <div>
-                                <p>Magret de canard</p>
+                                <h3>Magret de canard</h3>
                                 <p>Et parmentier de pommes de terre</p>
                             </div>
                             <div class="price-and-check">
@@ -86,7 +86,7 @@
                         </article>
                         <article class="card">
                             <div>
-                                <p>Pigeonneau d’Ille-et-Vilaine</p>
+                                <h3>Pigeonneau d’Ille-et-Vilaine</h3>
                                 <p>Sur son lit de gnocchis aux légumes</p>
                             </div>
                             <div class="price-and-check">
@@ -96,10 +96,10 @@
                         </article>
                     </div>
                     <h4>DESSERTS</h4>
-                    <div id="restaurant-cards">
+                    <div class="restaurant-cards">
                         <article class="card">
                             <div>
-                                <p>Pétales de violettes glacés</p>
+                                <h3>Pétales de violettes glacés</h3>
                                 <p>Et purée de noisettes</p>
                             </div>
                             <div class="price-and-check">
@@ -109,7 +109,7 @@
                         </article>
                         <article class="card">
                             <div>
-                                <p>Fondant au chocolat</p>
+                                <h3>Fondant au chocolat</h3>
                                 <p>Revisité</p>
                             </div>
                             <div class="price-and-check">
@@ -119,7 +119,7 @@
                         </article>
                         <article class="card">
                             <div>
-                                <p>Millefeuille croustillant</p>
+                                <h3>Millefeuille croustillant</h3>
                                 <p>Myrtilles et pâte d’amande</p>
                             </div>
                             <div class="price-and-check">
@@ -161,5 +161,4 @@
         </footer>
     </div>
 </body>
-
 </html>
