--- a/pages/palette.html
+++ b/pages/palette.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>OhMyFood</title>
-    <link rel="stylesheet" type="text/css" href="../style.css">
-    <link rel="stylesheet" type="text/css" href="../style-pages.css">
+    <link rel="stylesheet" type="text/css" href="../home.css">
+    <link rel="stylesheet" type="text/css" href="../restaurants.css">
 
 
     <script src="https://kit.fontawesome.com/af69d2ae7a.js" crossorigin="anonymous"></script>
@@ -32,10 +32,10 @@
                          
                     </div>
                     <h4>ENTRÉES</h4>
-                    <div id="restaurant-cards">
+                    <div class="restaurant-cards">
                         <article class="card">
                             <div>
-                                <p>Fricassée d'escargots</p>
+                                <h3>Fricassée d'escargots</h3>
                                 <p>Au piment d'Espelette</p>
                             </div>
                             <div class="price-and-check">
@@ -45,7 +45,7 @@
                         </article>
                         <article class="card">
                             <div>
-                                <p>Foie gras de canard mi-cuit</p>
+                                <h3>Foie gras de canard mi-cuit</h3>
                                 <p>Et ses copeaux de truffe noire</p>
                             </div>
                             <div class="price-and-check">
@@ -55,7 +55,7 @@
                         </article>
                         <article class="card">
                             <div>
-                                <p>Œuf au plat</p>
+                                <h3>Œuf au plat</h3>
                                 <p>Assaisonné à la truffe sur lit de caviar</p>
                             </div>
                             <div class="price-and-check">
@@ -65,10 +65,10 @@
                         </article>
                     </div>
                     <h4>PLATS</h4>
-                    <div id="restaurant-cards">
+                    <div class="restaurant-cards">
                         <article class="card">
                             <div>
-                                <p>Filet de bœuf aux herbes</p>
+                                <h3>Filet de bœuf aux herbes</h3>
                                 <p>Accompagné de sa ribambelle de légumes</p>
                             </div>
                             <div class="price-and-check">
@@ -78,7 +78,7 @@
                         </article>
                         <article class="card">
                             <div>
-                                <p>Parmentier de queue de bœuf</p>
+                                <h3>Parmentier de queue de bœuf</h3>
                                 <p>À la truffe noire sur sa purée de panais</p>
                             </div>
                             <div class="price-and-check">
@@ -88,7 +88,7 @@
                         </article>
                         <article class="card">
                             <div>
-                                <p>Filet de turbot</p>
+                                <h3>Filet de turbot</h3>
                                 <p>Aux agrumes</p>
                             </div>
                             <div class="price-and-check">
@@ -98,10 +98,10 @@
                         </article>
                     </div>
                     <h4>DESSERTS</h4>
-                    <div id="restaurant-cards">
+                    <div class="restaurant-cards">
                         <article class="card">
                             <div>
-                                <p>Paris-Brest</p>
+                                <h3>Paris-Brest</h3>
                                 <p>Revisité</p>
                             </div>
                             <div class="price-and-check">
@@ -111,7 +111,7 @@
                         </article>
                         <article class="card">
                             <div>
-                                <p>Macaron au chocolat d'exception</p>
+                                <h3>Macaron au chocolat d'exception</h3>
                                 <p>Et glace à la vanille de Madagascar</p>
                             </div>
                             <div class="price-and-check">
@@ -121,7 +121,7 @@
                         </article>
                         <article class="card">
                             <div>
-                                <p>Mousse au chocolat</p>
+                                <h3>Mousse au chocolat</h3>
                                 <p>Au piment d'Espelette et à la truffe noire</p>
                             </div>
                             <div class="price-and-check">
@@ -163,5 +163,4 @@
         </footer>
     </div>
 </body>
-
 </html>
