--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>OhMyFood</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="home.css">
     <script src="https://kit.fontawesome.com/af69d2ae7a.js" crossorigin="anonymous"></script>
 </head>
 
@@ -39,18 +39,17 @@
                     <article class="card">
                         <p>1</p>
                         <i class="fa-solid fa-mobile-screen-button" style="color: #7E7E7E;"></i>
-                        <p>Choisissez un restaurant</p>
+                        <h3>Choisissez un restaurant</h3>
                     </article>
                     <article class="card">
                         <p>2</p>
                         <i class="fa-solid fa-list-ul" style="color: #7E7E7E;"></i>
-                        <p>Composez votre menu</p>
+                        <h3>Composez votre menu</h3>
                     </article>
                     <article class="card">
                         <p>3</p>
                         <i class="fa-solid fa-store" style="color: #7E7E7E;"></i>
-                            
-                        <p>Dégustez au restaurant</p>
+                        <h3>Dégustez au restaurant</h3>
                     </article>
                 </div>
             </section>
@@ -64,7 +63,7 @@
                         <div class="nouveau">Nouveau</div>
                         <div class="card-content">
                             <div>
-                                <p>La palette du goût</p>
+                                <h3>La palette du goût</h3>
                                 <p>Ménilmontant</p>
                             </div>
                             <i class="fa-regular fa-heart"></i>
@@ -78,7 +77,7 @@
                         <div class="nouveau">Nouveau</div>
                         <div class="card-content">
                             <div>
-                                <p>La note enchantée</p>
+                                <h3>La note enchantée</h3>
                                 <p>Charonne</p>
                             </div>
                             <i class="fa-regular fa-heart"></i>
@@ -91,7 +90,7 @@
                         <img src="./assets/img/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="restaurant">
                         <div class="card-content">
                             <div>
-                                <p>À la française</p>
+                                <h3>À la française</h3>
                                 <p>Cité rouge</p>
                             </div>
                             <i class="fa-regular fa-heart"></i>
@@ -104,7 +103,7 @@
                         <img src="./assets/img/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="restaurant">
                         <div class="card-content">
                             <div>
-                                <p>Le délice des sens</p>
+                                <h3>Le délice des sens</h3>
                                 <p>Folie-Méricourt</p>
                             </div>
                             <i class="fa-regular fa-heart"></i>
@@ -141,5 +140,4 @@
         </footer>
     </div>
 </body>
-
 </html>
