--- a/pages/delice.html
+++ b/pages/delice.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>OhMyFood</title>
-    <link rel="stylesheet" type="text/css" href="../style.css">
-    <link rel="stylesheet" type="text/css" href="../style-pages.css">
+    <link rel="stylesheet" type="text/css" href="../home.css">
+    <link rel="stylesheet" type="text/css" href="../restaurants.css">
 
     <script src="https://kit.fontawesome.com/af69d2ae7a.js" crossorigin="anonymous"></script>
 </head>
@@ -30,10 +30,10 @@
                             </div>
                     </div>
                     <h4>ENTRÉES</h4>
-                    <div id="restaurant-cards">
+                    <div class="restaurant-cards">
                         <article class="card">
                             <div>
-                                <p>Tartare de thon</p>
+                                <h3>Tartare de thon</h3>
                                 <p>Assaisonné au yuzu</p>
                             </div>
                             <div class="price-and-check">
@@ -43,7 +43,7 @@
                         </article>
                         <article class="card">
                             <div>
-                                <p>Bouchée de homard croustillant</p>
+                                <h3>Bouchée de homard croustillant</h3>
                                 <p>Et sa farandole de petits légumes</p>
                             </div>
                             <div class="price-and-check">
@@ -53,7 +53,7 @@
                         </article>
                         <article class="card">
                             <div>
-                                <p>Velouté de cèpes</p>
+                                <h3>Velouté de cèpes</h3>
                                 <p>Aux truffes</p>
                             </div>
                             <div class="price-and-check">
@@ -63,10 +63,10 @@
                         </article>
                     </div>
                     <h4>PLATS</h4>
-                    <div id="restaurant-cards">
+                    <div class="restaurant-cards">
                         <article class="card">
                             <div>
-                                <p>Poulet rôti aux herbes de Provence</p>
+                                <h3>Poulet rôti aux herbes de Provence</h3>
                                 <p>Et sa crème de truffe</p>
                             </div>
                             <div class="price-and-check">
@@ -76,7 +76,7 @@
                         </article>
                         <article class="card">
                             <div>
-                                <p>Langouste rôtie</p>
+                                <h3>Langouste rôtie</h3>
                                 <p>Et ses légumes de saison</p>
                             </div>
                             <div class="price-and-check">
@@ -86,7 +86,7 @@
                         </article>
                         <article class="card">
                             <div>
-                                <p>Côte de bœuf Angus</p>
+                                <h3>Côte de bœuf Angus</h3>
                                 <p>Et sa purée de panais</p>
                             </div>
                             <div class="price-and-check">
@@ -96,10 +96,10 @@
                         </article>
                     </div>
                     <h4>DESSERTS</h4>
-                    <div id="restaurant-cards">
+                    <div class="restaurant-cards">
                         <article class="card">
                             <div>
-                                <p>Farandole de desserts</p>
+                                <h3>Farandole de desserts</h3>
                                 <p>Du chef</p>
                             </div>
                             <div class="price-and-check">
@@ -109,7 +109,7 @@
                         </article>
                         <article class="card">
                             <div>
-                                <p>Crème brulée</p>
+                                <h3>Crème brulée</h3>
                                 <p>Revisitée</p>
                             </div>
                             <div class="price-and-check">
@@ -119,7 +119,7 @@
                         </article>
                         <article class="card">
                             <div>
-                                <p>Tiramisu</p>
+                                <h3>Tiramisu</h3>
                                 <p>À la noisette</p>
                             </div>
                             <div class="price-and-check">
@@ -161,5 +161,4 @@
         </footer>
     </div>
 </body>
-
 </html>
