--- a/pages/note.html
+++ b/pages/note.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>OhMyFood</title>
-    <link rel="stylesheet" type="text/css" href="../style.css">
-    <link rel="stylesheet" type="text/css" href="../style-pages.css">
+    <link rel="stylesheet" type="text/css" href="../home.css">
+    <link rel="stylesheet" type="text/css" href="../restaurants.css">
 
     <script src="https://kit.fontawesome.com/af69d2ae7a.js" crossorigin="anonymous"></script>
 </head>
@@ -30,10 +30,10 @@
                             </div>
                     </div>
                     <h4>ENTRÉES</h4>
-                    <div id="restaurant-cards">
+                    <div class="restaurant-cards">
                         <article class="card">
                             <div>
-                                <p>Ravioles de foie gras</p>
+                                <h3>Ravioles de foie gras</h3>
                                 <p>Accompagnées de leur crème à la truffe</p>
                             </div>
                             <div class="price-and-check">
@@ -43,7 +43,7 @@
                         </article>
                         <article class="card">
                             <div>
-                                <p>Caviar osciètre</p>
+                                <h3>Caviar osciètre</h3>
                                 <p>Sur blini à la farine de blé noir</p>
                             </div>
                             <div class="price-and-check">
@@ -53,7 +53,7 @@
                         </article>
                         <article class="card">
                             <div>
-                                <p>Homard et espuma de potiron</p>
+                                <h3>Homard et espuma de potiron</h3>
                                 <p>Marinés aux zestes d'orange</p>
                             </div>
                             <div class="price-and-check">
@@ -63,7 +63,7 @@
                         </article>
                         <article class="card">
                             <div>
-                                <p>Foie gras de canard cuit entier</p>
+                                <h3>Foie gras de canard cuit entier</h3>
                                 <p>Confiture de figue et pain toasté</p>
                             </div>
                             <div class="price-and-check">
@@ -73,10 +73,10 @@
                         </article>
                     </div>
                     <h4>PLATS</h4>
-                    <div id="restaurant-cards">
+                    <div class="restaurant-cards">
                         <article class="card">
                             <div>
-                                <p>Noix de coquilles Saint-Jacques</p>
+                                <h3>Noix de coquilles Saint-Jacques</h3>
                                 <p>Sur lit de purée de céleri-rave</p>
                             </div>
                             <div class="price-and-check">
@@ -86,7 +86,7 @@
                         </article>
                         <article class="card">
                             <div>
-                                <p>Langoustine poêlée</p>
+                                <h3>Langoustine poêlée</h3>
                                 <p>Purée de patate douce</p>
                             </div>
                             <div class="price-and-check">
@@ -96,7 +96,7 @@
                         </article>
                         <article class="card">
                             <div>
-                                <p>Mijoté de queue de bœuf</p>
+                                <h3>Mijoté de queue de bœuf</h3>
                                 <p>Et riz sauvage aux zestes de citron</p>
                             </div>
                             <div class="price-and-check">
@@ -106,10 +106,10 @@
                         </article>
                     </div>
                     <h4>DESSERTS</h4>
-                    <div id="restaurant-cards">
+                    <div class="restaurant-cards">
                         <article class="card">
                             <div>
-                                <p>Macaron noisette et chocolat</p>
+                                <h3>Macaron noisette et chocolat</h3>
                                 <p>Glace au caramel brun et sel de Guérande</p>
                             </div>
                             <div class="price-and-check">
@@ -119,7 +119,7 @@
                         </article>
                         <article class="card">
                             <div>
-                                <p>Baba au rhum revisité</p>
+                                <h3>Baba au rhum revisité</h3>
                                 <p>Avec son coulis de citron</p>
                             </div>
                             <div class="price-and-check">
@@ -129,7 +129,7 @@
                         </article>
                         <article class="card">
                             <div>
-                                <p>Tarte au citron meringuée</p>
+                                <h3>Tarte au citron meringuée</h3>
                                 <p>Déstructurée</p>
                             </div>
                             <div class="price-and-check">
@@ -171,5 +171,4 @@
         </footer>
     </div>
 </body>
-
 </html>
