--- a/pages/delice.html
+++ b/pages/delice.html
@@ -12,7 +12,7 @@
 <body>
     <div class="container">
         <header>
-            <a href=""><i class="fa-solid fa-arrow-left" style="color: #000000;"></i></a>
+            <a href="/P3_ohMyFood/"><i class="fa-solid fa-arrow-left" style="color: #000000;"></i></a>
             <img src="../assets/img/logo/ohmyfood@2x.svg" alt="logo">
         </header>
 
