--- a/pages/delice.html
+++ b/pages/delice.html
@@ -12,7 +12,7 @@
 <body>
     <div class="container">
         <header>
-            <a href="P3_ohMyFood/"><i class="fa-solid fa-arrow-left" style="color: #000000;"></i></a>
+            <a href="/P3_ohMyFood/"><i class="fa-solid fa-arrow-left" style="color: #000000;"></i></a>
             <img src="../assets/img/logo/ohmyfood@2x.svg" alt="logo">
         </header>
 
@@ -21,7 +21,7 @@
                 <img src="../assets/img/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="restaurant">
                 <div>
                     <div id="restaurant-title">
-                        <h1>Le délice des </h1>
+                        <h1>Le délice des sens</h1>
                         <div class="relative">
                             <i class="fa-regular fa-heart"></i>
                             <i class="fa-solid fa-heart"></i>  
